--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -17,8 +17,8 @@
 ;==========================================================
 
 [colors]
-background = #535353
-background-alt = #353535
+background = #000000
+background-alt = #000000
 foreground = #ffffff
 primary = #15539E
 secondary = #8ABEB7
@@ -27,7 +27,7 @@ disabled = #707880
 
 [bar/mybar]
 width = 100%
-height = 22pt
+height = 20pt
 radius = 0
 
 ; dpi = 96
@@ -37,7 +37,7 @@ foreground = ${colors.foreground}
 
 line-size = 3pt
 
-border-size = 3pt
+border-size = 0pt
 border-color = #353535
 
 padding-left = 1
@@ -48,26 +48,23 @@ module-margin = 1
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = sans:size=11;2
-font-1 = FontAwesome:size=11;2
-font-2 = monospace:size=11;2
+font-0 = sans:size=10;2
+font-1 = FontAwesome:size=10;2
+font-2 = monospace:size=10;2
 ; font-2 = JoyPixels:scale=11;2
 
 modules-left = xworkspaces xwindow
-modules-right = pulseaudio date
+modules-right = pulseaudio wttr date power
 
 cursor-click = pointer
 cursor-scroll = ns-resize
 
 enable-ipc = true
 
-tray-position = right
+tray-position = left
 
-; wm-restack = generic
 wm-restack = bspwm
-; wm-restack = i3
 
-; override-redirect = true
 
 [module/xworkspaces]
 type = internal/xworkspaces
@@ -92,16 +89,7 @@ label-empty-padding = 1
 type = internal/xwindow
 label = %title:0:60:...%
 
-; [module/filesystem]
-; type = internal/fs
-; interval = 25
 
-; mount-0 = /home
-
-; label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
-
-; label-unmounted = %mountpoint% not mounted
-; label-unmounted-foreground = ${colors.disabled}
 
 [module/pulseaudio]
 type = internal/pulseaudio
@@ -116,6 +104,47 @@ label-muted = 婢 MUTE
 label-muted-foreground = ${colors.disabled}
 
 click-right = pavucontrol
+
+[module/wttr]
+type = custom/script
+
+exec = echo $(curl "wttr.in/Actopan+Hidalgo?format=1")
+tail = true
+
+interval = 1800
+
+[module/date]
+type = custom/script
+
+exec = sb-date
+tail = true
+
+interval = 15
+
+click-left = st -c Calcurse -e calcurse
+
+[module/power]
+type = custom/script
+
+exec = echo 
+tail = true
+
+click-left = rofi -show power-menu -modi power-menu:rofi-power-menu
+
+[settings]
+screenchange-reload = true
+pseudo-transparency = true
+
+; [module/filesystem]
+; type = internal/fs
+; interval = 25
+
+; mount-0 = /home
+
+; label-mounted = %{F#F0C674}%mountpoint%%{F-} %percentage_used%%
+
+; label-unmounted = %mountpoint% not mounted
+; label-unmounted-foreground = ${colors.disabled}
 
 ; [module/xkeyboard]
 ; type = internal/xkeyboard
@@ -167,19 +196,5 @@ click-right = pavucontrol
 
 ; click-left = pamixer -t
 ; click-right = pavucontrol
-
-[module/date]
-type = custom/script
-
-exec = sb-date
-tail = true
-
-interval = 15
-
-click-left = st -c Calcurse -e calcurse
-
-[settings]
-screenchange-reload = true
-pseudo-transparency = true
 
 ; vim:ft=dosini
