--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -54,7 +54,7 @@ font-2 = monospace:size=10;2
 ; font-2 = JoyPixels:scale=11;2
 
 modules-left = xworkspaces xwindow
-modules-right = pulseaudio wttr date power
+modules-right = pulseaudio date power
 
 cursor-click = pointer
 cursor-scroll = ns-resize
@@ -104,14 +104,6 @@ label-muted = 婢 MUTE
 label-muted-foreground = ${colors.disabled}
 
 click-right = pavucontrol
-
-[module/wttr]
-type = custom/script
-
-exec = echo $(curl "wttr.in/Actopan+Hidalgo?format=1")
-tail = true
-
-interval = 1800
 
 [module/date]
 type = custom/script
