--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -61,10 +61,9 @@ cursor-scroll = ns-resize
 
 enable-ipc = true
 
-tray-position = left
+tray-position = right
 
 wm-restack = bspwm
-
 
 [module/xworkspaces]
 type = internal/xworkspaces
