--- a/sway/config
+++ b/sway/config
@@ -14,16 +14,16 @@ set $down j
 set $up k
 set $right l
 # Your preferred terminal emulator
-set $term foot
+set $term foot -e tmux
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
-set $menu dmenu_path | dmenu | xargs swaymsg exec --
+set $menu bemenu-run | xargs swaymsg exec --
 
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
+output * bg ~/Imágenes/Wallpapers/skyline_night.jpg fill
 #
 # Example configuration:
 #
@@ -68,7 +68,7 @@ input * {
 # Basics:
 #
     # Start a terminal
-    bindsym $mod+Return exec $term -e tmux
+    bindsym $mod+Return exec $term
 
     # Kill focused window
     bindsym $mod+Shift+q kill
@@ -97,10 +97,10 @@ input * {
     bindsym $mod+$up focus up
     bindsym $mod+$right focus right
     # Or use $mod+[up|down|left|right]
-    bindsym $mod+Left focus left
-    bindsym $mod+Down focus down
-    bindsym $mod+Up focus up
-    bindsym $mod+Right focus right
+#    bindsym $mod+Left focus left
+#    bindsym $mod+Down focus down
+#    bindsym $mod+Up focus up
+#    bindsym $mod+Right focus right
 
     # Move the focused window with the same, but add Shift
     bindsym $mod+Shift+$left move left
@@ -108,10 +108,10 @@ input * {
     bindsym $mod+Shift+$up move up
     bindsym $mod+Shift+$right move right
     # Ditto, with arrow keys
-    bindsym $mod+Shift+Left move left
-    bindsym $mod+Shift+Down move down
-    bindsym $mod+Shift+Up move up
-    bindsym $mod+Shift+Right move right
+#    bindsym $mod+Shift+Left move left
+#    bindsym $mod+Shift+Down move down
+#    bindsym $mod+Shift+Up move up
+#    bindsym $mod+Shift+Right move right
 #
 # Workspaces:
 #
