--- a/foot/foot.ini
+++ b/foot/foot.ini
@@ -1,8 +1,8 @@
 # -*- conf -*-
 
-# shell=$SHELL (if set, otherwise user's default shell from /etc/passwd)
-# term=foot (or xterm-256color if built with -Dterminfo=disabled)
-# login-shell=no
+shell=/usr/bin/bash
+term=foot
+login-shell=yes
 
 # app-id=foot
 # title=foot
