--- a/sway/config
+++ b/sway/config
@@ -62,8 +62,8 @@
 
 ### Window options ###
 ##Window borders
-    default_border normal 2
-
+    default_border pixel 2
+    gaps inner 8
 
 ### Key bindings ###
 
@@ -219,22 +219,44 @@ bindsym XF86AudioRaiseVolume exec "pactl set-sink-volume @DEFAULT_SINK@ +10%"
 bindsym XF86MonBrightnessDown exec "xbacklight -dec 10"
 bindsym XF86MonBrightnessUp exec "xbacklight -inc 10"
 
-#
+## Multimedia control ##
+bindsym XF86AudioPlay exec 'playerctl play-pause'
+bindsym XF86AudioNext exec 'playerctl next'
+bindsym XF86AudioPrev exec 'playerctl previous'
+
+## Screenshots ##
+
+# Capture whole screen and save it to folder  
+bindsym Print exec 'grimshot --notify save output $XDG_PICTURES_DIR/Capturas\ de\ pantalla/"Captura del $(date)".png'
+# Capture whole screen and save it to clipboard
+bindsym Ctrl+Print exec 'grimshot --notify copy output'
+
+# Capture selected area and save it to folder  
+bindsym Shift+Print exec 'grimshot --notify save area $XDG_PICTURES_DIR/Capturas\ de\ pantalla/"Captura del $(date)".png'
+# Capture selected area and save it to clipboard
+bindsym Ctrl+Shift+Print exec 'grimshot --notify copy area'
+
+# Capture selected window and save it to folder  
+bindsym Alt+Print exec 'grimshot --notify save window $XDG_PICTURES_DIR/Capturas\ de\ pantalla/"Captura del $(date)".png'
+# Capture selected area and save it to clipboard
+bindsym Ctrl+Alt+Print exec 'grimshot --notify copy window'
+
 # Status Bar:
 #
 # Read `man 5 sway-bar` fok more information about this section.
 bar {
-    position top
-
-    # When the status_command prints a new line to stdout, swaybar updates.
-    # The default just shows the current date and time.
-    status_command while date +'%Y-%m-%d %I:%M:%S %p'; do sleep 1; done
-
-    colors {
-        statusline #ffffff
-        background #323232
-        inactive_workspace #32323200 #32323200 #5c5c5c
-    }
+    swaybar_command waybar
+#    position top
+#
+#    # When the status_command prints a new line to stdout, swaybar updates.
+#    # The default just shows the current date and time.
+#    status_command while date +'%Y-%m-%d %I:%M:%S %p'; do sleep 1; done
+#
+#    colors {
+#        statusline #ffffff
+#        background #323232
+#        inactive_workspace #32323200 #32323200 #5c5c5c
+#    }
 }
 
 include /etc/sway/config.d/*
