--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -42,53 +42,9 @@ hide_window_decorations yes
 
 #: Color scheme
 
-background #131313
-foreground #d6dbe4
-cursor #b9b9b9
 background_opacity 0.9
 
-selection_background #1f1f1f
-selection_foreground #131313
-
-color0      #1f1f1f 
-color8      #d6dae4 
-
-#: black
-
-color1      #f71118 
-color9      #de342e 
-
-#: red
-
-color2      #2cc55d 
-color10     #1dd260 
-
-#: green
-
-color3      #ecb90f 
-color11     #f2bd09 
-
-#: yellow
-
-color4      #2a84d2 
-color12     #0f80d5
-
-#: blue
-
-color5      #4e59b7 
-color13     #524fb9 
-
-#: magenta
-
-color6      #0f80d5
-color14     #0f7cda
-
-#: cyan
-
-color7      #d6dae4 
-color15     #ffffff 
-
-#: white
+include Brogrammer.conf
 
 #: Advanced
 
