--- a/sway/config
+++ b/sway/config
@@ -1,6 +1,9 @@
-### Variables
+#################
+### Variables ###
+#################
 
-font pango:sans 10
+# Font
+    font pango:sans 10
 # Wallpaper folder
     set $wallpaper_folder ~/Imágenes/Wallpapers/
 # Logo key. Use Mod1 for Alt.
@@ -15,10 +18,10 @@ font pango:sans 10
 # Preferred web browser
     set $browser $BROWSER
 
-# Your preferred terminal emulator
+# Preferred terminal emulator
     set $term $TERMINAL
 
-# Your preferred application launcher
+# Preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
     set $menu bemenu-run \
@@ -28,19 +31,34 @@ font pango:sans 10
             --width-factor 0.5 \
             --no-overlap | xargs swaymsg exec --
 
-### Output configuration
+############################
+### Output configuration ###
+############################
 
-# Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-    output eDP-1 {
-        background $wallpaper_folder"deja-vu.jpg" fill
+## Example configuration:
+##
+##    output HDMI-A-1 resolution 1360x768 position 0,0
+##    output eDP-1 resolution 1366x768 position 1360,0
+##
+## You can get the names of your outputs by running: swaymsg -t get_outputs
+
+## External monitor
+    output DP-1 {
+        resolution 1920x1080
+        position 0,0
+        background $wallpaper_folder"evening_pixel.png" fill
     }
 
-# Example configuration:
-#
-#    output HDMI-A-1 resolution 1360x768 position 0,0
-#    output eDP-1 resolution 1366x768 position 1360,0
-#
-# You can get the names of your outputs by running: swaymsg -t get_outputs
+## Laptop screen
+    output eDP-1 {
+        background $wallpaper_folder"morning_pixel.png" fill
+            resolution 1366x768
+            position 1920,0
+    }
+    
+## Toggle laptop screen on and off
+    bindsym $mod+Ctrl+p output eDP-1 toggle
+
 
 ### Idle configuration
 #
@@ -55,21 +73,30 @@ font pango:sans 10
 # your displays after another 300 seconds, and turn your screens back on when'
 # resumed. It will also lock your screen before your computer goes to sleep.
 
-### Input configuration
-#
-# Example configuration:
-#
-#   input "2:14:SynPS/2_Synaptics_TouchPad" {
-#       dwt enabled
-#       tap enabled
-#       natural_scroll enabled
-#       middle_emulation enabled
-#   }
-#
-# You can get the names of your inputs by running: swaymsg -t get_inputs
-# Read `man 5 sway-input` for more information about this section.
+###########################
+### Input configuration ###
+###########################
 
-    input * {
+
+## Example configuration:
+##
+##   input "2:14:SynPS/2_Synaptics_TouchPad" {
+##       dwt enabled
+##       tap enabled
+##       natural_scroll enabled
+##       middle_emulation enabled
+##   }
+##
+## You can get the names of your inputs by running: swaymsg -t get_inputs
+## Read `man 5 sway-input` for more information about this section.
+
+# Laptop keyboard
+    input "1:1:AT_Translated_Set_2_keyboard" {
+    	xkb_layout "latam"
+    }
+
+# External keyboard
+    input "1133:49948:Logitech_USB_Keyboard" {
     	xkb_layout "es"
     }
 
@@ -164,6 +191,9 @@ font pango:sans 10
     bindsym $mod+Shift+0 move container to workspace number 10
     # Note: workspaces can have any name you want, not just numbers.
     # We just use 1-10 as the default.
+    # Move window between outputs
+    bindsym $mod+P move container to output right
+    bindsym $mod+Shift+P move container to output left
 
 #
 # Layout
