More kitty colorschemes

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -43,8 +43,7 @@ hide_window_decorations yes
 #: Color scheme
 
 background_opacity 0.9
-
-include Brogrammer.conf
+include adwaita.conf
 
 #: Advanced
 
