--- a/sway/config
+++ b/sway/config
@@ -42,23 +42,25 @@
 ##
 ## You can get the names of your outputs by running: swaymsg -t get_outputs
 
-## External monitor
+## External monitor (left)
     output DP-1 {
+        background $wallpaper_folder"anime_room.png" fill
         resolution 1920x1080
         position 0,0
-        background $wallpaper_folder"evening_pixel.png" fill
     }
 
-## Laptop screen
+## Laptop screen (right)
     output eDP-1 {
-        background $wallpaper_folder"morning_pixel.png" fill
+        background $wallpaper_folder"anime_sunset.jpg" fill
             resolution 1366x768
             position 1920,0
     }
     
 ## Toggle laptop screen on and off
     bindsym $mod+Ctrl+p output eDP-1 toggle
-
+## Move windows between outputs
+    bindsym $mod+P move container to output right
+    bindsym $mod+Shift+P move container to output left
 
 ### Idle configuration
 #
@@ -77,7 +79,6 @@
 ### Input configuration ###
 ###########################
 
-
 ## Example configuration:
 ##
 ##   input "2:14:SynPS/2_Synaptics_TouchPad" {
@@ -90,27 +91,38 @@
 ## You can get the names of your inputs by running: swaymsg -t get_inputs
 ## Read `man 5 sway-input` for more information about this section.
 
-# Laptop keyboard
+## Laptop keyboard
     input "1:1:AT_Translated_Set_2_keyboard" {
     	xkb_layout "latam"
     }
 
-# External keyboard
+## External keyboard
     input "1133:49948:Logitech_USB_Keyboard" {
     	xkb_layout "es"
     }
 
-
+######################
 ### Window options ###
+######################
+
 ## Window rules per app_id
     for_window [app_id="calcurse"] floating enable
     for_window [app_id="pavucontrol"] floating enable
     for_window [app_id="htop"] floating enable
-##Window borders
+    for_window [title="Steam - Noticias"] floating enable
+    for_window [title="Lista de amigos"] floating enable
+    for_window [class="MEGAsync"] move container to workspace number 10
+    for_window [class="MEGAsync"] border pixel 0
+    for_window [class="MEGAsync"] floating enable
+    for_window [class="MEGAsync"] nofocus
+
+## Window borders
     default_border pixel 2
     gaps inner 8
 
+####################
 ### Key bindings ###
+####################
 
 ## Basics ##
 
@@ -139,34 +151,24 @@
     # Exit sway (logs you out of your Wayland session)
     bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -B 'Yes, exit sway' 'swaymsg exit'
 
-#
-# Moving around:
-#
+
+## Moving around ##
+
     # Move your focus around
     bindsym $mod+$left focus left
     bindsym $mod+$down focus down
     bindsym $mod+$up focus up
     bindsym $mod+$right focus right
-    # Or use $mod+[up|down|left|right]
-#    bindsym $mod+Left focus left
-#    bindsym $mod+Down focus down
-#    bindsym $mod+Up focus up
-#    bindsym $mod+Right focus right
 
     # Move the focused window with the same, but add Shift
     bindsym $mod+Shift+$left move left
     bindsym $mod+Shift+$down move down
     bindsym $mod+Shift+$up move up
     bindsym $mod+Shift+$right move right
-    # Ditto, with arrow keys
-#    bindsym $mod+Shift+Left move left
-#    bindsym $mod+Shift+Down move down
-#    bindsym $mod+Shift+Up move up
-#    bindsym $mod+Shift+Right move right
 
-#
-# Workspaces:
-#
+
+## Workspaces ##
+
     # Switch to workspace
     bindsym $mod+1 workspace number 1
     bindsym $mod+2 workspace number 2
@@ -192,12 +194,9 @@
     # Note: workspaces can have any name you want, not just numbers.
     # We just use 1-10 as the default.
     # Move window between outputs
-    bindsym $mod+P move container to output right
-    bindsym $mod+Shift+P move container to output left
 
-#
-# Layout
-#
+## Layout ##
+
     # You can "split" the current object of your focus with
     # $mod+b or $mod+v, for horizontal and vertical splits
     # respectively.
@@ -221,9 +220,8 @@
     # Move focus to the parent container
     bindsym $mod+a focus parent
 
-#
-# Scratchpad:
-#
+## Scratchpad ##
+
     # Sway has a "scratchpad", which is a bag of holding for windows.
     # You can send windows there and get them back later.
 
@@ -234,9 +232,38 @@
     # If there are multiple scratchpad windows, this command cycles through them.
     bindsym $mod+minus scratchpad show
 
-#
-# Resizing containers:
-#
+## Audio control ##
+    bindsym XF86AudioMute exec "pactl set-sink-mute @DEFAULT_SINK@ toggle"
+    bindsym XF86AudioLowerVolume exec "pactl set-sink-volume @DEFAULT_SINK@ -10%"
+    bindsym XF86AudioRaiseVolume exec "pactl set-sink-volume @DEFAULT_SINK@ +10%"
+    
+## Backlight control ##
+    bindsym XF86MonBrightnessDown exec "xbacklight -dec 10"
+    bindsym XF86MonBrightnessUp exec "xbacklight -inc 10"
+    
+## Multimedia control ##
+    bindsym XF86AudioPlay exec 'playerctl play-pause'
+    bindsym XF86AudioNext exec 'playerctl next'
+    bindsym XF86AudioPrev exec 'playerctl previous'
+
+## Screenshots ##
+    # Capture whole screen and save it to folder  
+    bindsym Print exec 'grimshot --notify save output $XDG_PICTURES_DIR/Capturas\ de\ pantalla/"Captura del $(date)".png'
+    # Capture whole screen and save it to clipboard
+    bindsym Ctrl+Print exec 'grimshot --notify copy output'
+    
+    # Capture selected area and save it to folder  
+    bindsym Shift+Print exec 'grimshot --notify save area $XDG_PICTURES_DIR/Capturas\ de\ pantalla/"Captura del $(date)".png'
+    # Capture selected area and save it to clipboard
+    bindsym Ctrl+Shift+Print exec 'grimshot --notify copy area'
+    
+    # Capture selected window and save it to folder  
+    bindsym Alt+Print exec 'grimshot --notify save window $XDG_PICTURES_DIR/Capturas\ de\ pantalla/"Captura del $(date)".png'
+    # Capture selected area and save it to clipboard
+    bindsym Ctrl+Alt+Print exec 'grimshot --notify copy window'
+
+## Resizing containers ##
+
 mode "resize" {
     # left will shrink the containers width
     # right will grow the containers width
@@ -247,67 +274,19 @@ mode "resize" {
     bindsym $up resize shrink height 10px
     bindsym $right resize grow width 10px
 
-    # Ditto, with arrow keys
-#    bindsym Left resize shrink width 10px
-#    bindsym Down resize grow height 10px
-#    bindsym Up resize shrink height 10px
-#    bindsym Right resize grow width 10px
-
     # Return to default mode
     bindsym Return mode "default"
     bindsym Escape mode "default"
 }
 bindsym $mod+r mode "resize"
 
-### Misc ###
+################
+## Status Bar ##
+################
 
-## Audio control ##
-bindsym XF86AudioMute exec "pactl set-sink-mute @DEFAULT_SINK@ toggle"
-bindsym XF86AudioLowerVolume exec "pactl set-sink-volume @DEFAULT_SINK@ -10%"
-bindsym XF86AudioRaiseVolume exec "pactl set-sink-volume @DEFAULT_SINK@ +10%"
-
-## Backlight control ##
-bindsym XF86MonBrightnessDown exec "xbacklight -dec 10"
-bindsym XF86MonBrightnessUp exec "xbacklight -inc 10"
-
-## Multimedia control ##
-bindsym XF86AudioPlay exec 'playerctl play-pause'
-bindsym XF86AudioNext exec 'playerctl next'
-bindsym XF86AudioPrev exec 'playerctl previous'
-
-## Screenshots ##
-
-# Capture whole screen and save it to folder  
-bindsym Print exec 'grimshot --notify save output $XDG_PICTURES_DIR/Capturas\ de\ pantalla/"Captura del $(date)".png'
-# Capture whole screen and save it to clipboard
-bindsym Ctrl+Print exec 'grimshot --notify copy output'
-
-# Capture selected area and save it to folder  
-bindsym Shift+Print exec 'grimshot --notify save area $XDG_PICTURES_DIR/Capturas\ de\ pantalla/"Captura del $(date)".png'
-# Capture selected area and save it to clipboard
-bindsym Ctrl+Shift+Print exec 'grimshot --notify copy area'
-
-# Capture selected window and save it to folder  
-bindsym Alt+Print exec 'grimshot --notify save window $XDG_PICTURES_DIR/Capturas\ de\ pantalla/"Captura del $(date)".png'
-# Capture selected area and save it to clipboard
-bindsym Ctrl+Alt+Print exec 'grimshot --notify copy window'
-
-# Status Bar:
-#
 # Read `man 5 sway-bar` fok more information about this section.
 bar {
     swaybar_command waybar
-#    position top
-#
-#    # When the status_command prints a new line to stdout, swaybar updates.
-#    # The default just shows the current date and time.
-#    status_command while date +'%Y-%m-%d %I:%M:%S %p'; do sleep 1; done
-#
-#    colors {
-#        statusline #ffffff
-#        background #323232
-#        inactive_workspace #32323200 #32323200 #5c5c5c
-#    }
 }
 
 include /etc/sway/config.d/*
