--- a/fontconfig/fonts.conf
+++ b/fontconfig/fonts.conf
@@ -28,7 +28,7 @@
 	<alias>
 		<family>monospace</family>
 		<prefer>
-			<family>LiterationMono Nerd Font Mono</family>
+			<family>FiraCode NF</family>
 			<family>Liberation Mono</family>
 			<family>FontAwesome</family>
 			<family>Braille</family>
