New colorscheme for Kitty

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -37,13 +37,13 @@ bell_on_tab true
 
 window_padding_width 1
 active_border_color none
-inactive_text_alpha 0.5
+# inactive_text_alpha 0.5
 hide_window_decorations yes
 
 #: Color scheme
 
-background_opacity 0.9
-include adwaita.conf
+background_opacity 0.95
+include Seti.conf
 
 #: Advanced
 
