--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,6 +1,6 @@
 #: Fonts
 
-font_family      monospace
+font_family      FiraCode Nerd Font Mono
 bold_font        auto 
 italic_font      auto 
 bold_italic_font auto  
@@ -28,7 +28,6 @@ sync_to_monitor yes
 #: Terminal bell
 
 enable_audio_bell no
-
 visual_bell_duration 0.2
 window_alert_on_bell no
 bell_on_tab true
@@ -37,13 +36,15 @@ bell_on_tab true
 
 window_padding_width 1
 active_border_color none
-# inactive_text_alpha 0.5
-hide_window_decorations yes
+hide_window_decorations no 
 
 #: Color scheme
 
-background_opacity 0.98
+background_opacity 0.95
 include Seti.conf
+
+#: Tab configuration
+tab_bar_style slant
 
 #: Advanced
 
@@ -52,7 +53,5 @@ update_check_interval 0
 
 #: Linux specific tweaks
 
-wayland_titlebar_color background
-linux_display_server wayland
-
-#: Window managment
+wayland_titlebar_color system
+linux_display_server x11
