--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -38,17 +38,17 @@ foreground = ${colors.foreground}
 
 line-size = 0pt
 
-border-size = 0pt
+; border-size = 5pt
 ; border-color = #00000000
 ; border-color = ${colors.primary}
 
 padding-left = 0
-padding-right = 1
+padding-right = 0
 
-module-margin = 1
+module-margin = 0
 
-separator = |
-separator-foreground = ${colors.disabled}
+separator = ﮆ
+separator-foreground = ${colors.primary}
 
 font-0 = "monospace:size=10;1"
 font-1 = "Symbols Nerd Font Mono:size=10;1"
@@ -96,36 +96,36 @@ label-unfocused-padding = 1
 [module/temperature]
 type = internal/temperature
 
-format-prefix = " "
-format-prefix-foreground = ${colors.primary}
-label = %temperature-c%
+format-background = ${colors.primary}
+label =   %temperature-c%
+label-padding = 1
 
 [module/memory]
 type = internal/memory
 interval = 1
-format-prefix = " "
-format-prefix-foreground = ${colors.primary}
-label = %percentage_used:2%%
+format-background = ${colors.primary}
+label =   %percentage_used:2%%
+label-padding = 1
 
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-prefix = " "
-format-prefix-foreground = ${colors.primary}
-label = %percentage:2%%
+format-background = ${colors.primary}
+label =   %percentage:2%%
+label-padding = 1
 
 [module/pulseaudio]
 type = internal/pulseaudio
 
 format-volume = <label-volume>
 
-format-volume-prefix = " "
-format-volume-prefix-foreground = ${colors.primary}
-label-volume = %percentage%%
+format-volume-background = ${colors.primary}
+label-volume =   %percentage:3%%
+label-volume-padding = 1
 
-format-muted-prefix = "婢"
-format-muted-prefix-foreground = ${colors.primary}
-label-muted = " Muted"
+format-muted-background = ${colors.primary}
+label-muted =  婢 Muted
+label-muted-padding = 1
 
 [module/date]
 type = internal/date
@@ -133,9 +133,9 @@ interval = 1
 
 date = %a %d %b, %H:%M
 
-format-prefix = " "
-format-prefix-foreground = ${colors.primary}
-label = %date%
+format-background = ${colors.primary}
+label =   %date%
+label-padding = 1
 
 [module/filesystem]
 type = internal/fs
