--- a/i3/config
+++ b/i3/config
@@ -19,19 +19,10 @@ font pango:monospace 9
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
 #font pango:DejaVu Sans Mono 8
 
+# Autostart
 # Polybar
 exec_always $XDG_CONFIG_HOME/polybar/launch.sh
-
-# The combination of xss-lock, nm-applet and pactl is a popular choice, so
-# they are included here as an example. Modify as you see fit.
-
-# xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
-# screen before suspend. Use loginctl lock-session to lock your screen.
-# exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
-
-# NetworkManager is the most popular way to manage wireless networks on Linux,
-# and nm-applet is a desktop environment-independent system tray GUI for it.
-# exec --no-startup-id nm-applet
+# exec_always $TERMINAL -e btop -t "System resources"
 
 # Colors
 set_from_resource $normbordercolor i3wm.normbordercolor #282828
@@ -51,22 +42,26 @@ client.placeholder      #000000         #0c0c0c         #ffffff         #000000 
 
 client.background       $normbgcolor
 
-
-# Window title alignment
-title_align left
+# Windows
+title_align center
 default_border normal
 
-# Window rules
+# xprop(1):
+#  WM_CLASS(STRING) = instance, class
+#  WM_NAME(STRING) = title
 
-# exec_always /usr/bin/kermit -e btop -t "System Resources"
-# for_window [title="System Resources"] move scratchpad floating enable
-# bindsym $mod+ñ assign [title="System Resources"]
+# Workspaces
 assign [class="firefox"] 1
+assign [class="Steam"] 8
+assign [class="Steam"] 8
+assign [class="Steam"] 8
+
+# Rules
+for_window [instance="Places" class="firefox"] floating enable
+for_window [class="fzfTerm"] floating enable border pixel 0
 for_window [class="Dragon"] border pixel 1
 for_window [class="Steam"] floating enable
-assign [class="Steam"] 8
-assign [class="Steam"] 8
-assign [class="Steam"] 8
+for_window [title="System resources"] floating enable
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -111,10 +106,10 @@ bindsym $mod+Shift+space floating toggle
 bindsym $mod+space focus mode_toggle
 
 # focus the parent container
-# bindsym $mod+a focus parent
+bindsym $mod+a focus parent
 
 # focus the child container
-# bindsym $mod+d focus child
+bindsym $mod+d focus child
 
 # Define names for default workspaces for which we configure key bindings later on.
 # We use variables to avoid repeating the names in multiple places.
