--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -17,12 +17,12 @@
 ;==========================================================
 
 [colors]
-background      = #222222
-background-alt  = #005577
-foreground      = #bbbbbb
-foreground-alt  = #eeeeee
-primary         = #005577
-disabled        = #444444
+background      = #3d3846
+background-alt  = #1a5fb4
+foreground      = #deddda
+foreground-alt  = #f6f5f4
+primary         = #1a5fb4
+disabled        = #5e4c64
 
 [bar/mybar]
 locale = es_MX.UTF-8
@@ -38,9 +38,8 @@ foreground = ${colors.foreground}
 
 line-size = 0pt
 
-; border-size = 5pt
-; border-color = #00000000
-; border-color = ${colors.primary}
+; border-size = 3pt
+; border-color = ${colors.background}
 
 padding-left = 0
 padding-right = 0
