--- a/gtk-3.0/settings.ini
+++ b/gtk-3.0/settings.ini
@@ -1,6 +1,7 @@
 [Settings]
-gtk-theme-name=Arc-Gruvbox
-gtk-icon-theme-name=Adwaita++-Dark
+gtk-theme-name=Adwaita
+; gtk-application-prefer-dark-theme=1
+; gtk-icon-theme-name=Adwaita++-Dark
 gtk-font-name=Sans 10
 gtk-cursor-theme-size=0
 gtk-toolbar-style=GTK_TOOLBAR_TEXT
