--- a/fontconfig/fonts.conf
+++ b/fontconfig/fonts.conf
@@ -28,8 +28,8 @@
 	<alias>
 		<family>monospace</family>
 		<prefer>
-			<family>Corporate Mono</family>
-			<!-- <family>Noto Sans Mono</family> -->
+			<!-- <family>Corporate Mono</family> -->
+			<family>Noto Sans Mono</family>
 			<family>Symbols Nerd Font Mono</family>
 			<family>FontAwesome</family>
 			<family>Braille</family>
