polybar: Simple bar

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -17,12 +17,11 @@
 ;==========================================================
 
 [colors]
-background      = #3d3846
-background-alt  = #1a5fb4
-foreground      = #deddda
-foreground-alt  = #f6f5f4
-primary         = #1a5fb4
-disabled        = #5e4c64
+background = #000000
+foreground = #deddda
+disabled   = #3d3864
+primary    = #15549e
+urgent     = #e01b24
 
 [bar/mybar]
 locale = es_MX.UTF-8
@@ -31,25 +30,21 @@ bottom = true
 height = 15pt
 radius = 0
 
-; dpi = 96
-
 background = ${colors.background}
 foreground = ${colors.foreground}
 
-line-size = 0pt
-
-; border-size = 3pt
-; border-color = ${colors.background}
+; Size of underline
+line-size = 2pt
 
 padding-left = 0
 padding-right = 0
 
 module-margin = 0
 
-separator = ﮆ
-separator-foreground = ${colors.primary}
+separator = |
+separator-foreground = ${colors.disabled}
 
-font-0 = "monospace:size=10;1"
+font-0 = "monospace:style=SemiBold:size=10;1"
 font-1 = "Symbols Nerd Font Mono:size=10;1"
 
 cursor-click = pointer
@@ -57,35 +52,32 @@ cursor-scroll = ns-resize
 
 enable-ipc = true
 
-; tray-position = right
-
 wm-restack = i3
 
 modules-left = i3
 modules-right = temperature cpu memory pulseaudio date
 
-; override-redirect = true
-
 [module/i3]
 type = internal/i3
 
-label-mode = %mode%
+label-mode =  %mode%
 label-mode-padding = 1
-label-mode-foreground = ${colors.foreground-alt} 
-label-mode-background = ${colors.primary} 
+label-mode-foreground = ${colors.foreground}
+label-mode-background = ${colors.primary}
 
 label-focused = %name%
-label-focused-foreground = ${colors.foreground-alt}
-label-focused-background = ${colors.background-alt}
-label-focused-underline = ${colors.primary}
+label-focused-foreground = ${colors.foreground}
+label-focused-background = ${colors.background}
+label-focused-underline = ${colors.foreground}
 label-focused-padding = 1
 
 label-visible = %name%
 label-visible-padding = 1
 
 label-urgent = %name%
-label-urgent-foreground = ${colors.background}
-label-urgent-background = ${colors.primary}
+label-urgent-foreground = ${colors.urgent}
+label-urgent-background = ${colors.background}
+label-urgent-underline = ${colors.urgent}
 label-urgent-padding = 1
 
 label-unfocused = %name%
@@ -95,21 +87,21 @@ label-unfocused-padding = 1
 [module/temperature]
 type = internal/temperature
 
-format-background = ${colors.primary}
+format-background = ${colors.background}
 label =   %temperature-c%
 label-padding = 1
 
 [module/memory]
 type = internal/memory
 interval = 1
-format-background = ${colors.primary}
+format-background = ${colors.background}
 label =   %percentage_used:2%%
 label-padding = 1
 
 [module/cpu]
 type = internal/cpu
 interval = 2
-format-background = ${colors.primary}
+format-background = ${colors.background}
 label =   %percentage:2%%
 label-padding = 1
 
@@ -118,13 +110,15 @@ type = internal/pulseaudio
 
 format-volume = <label-volume>
 
-format-volume-background = ${colors.primary}
+format-volume-background = ${colors.background}
 label-volume =   %percentage:3%%
 label-volume-padding = 1
 
-format-muted-background = ${colors.primary}
+format-muted-background = ${colors.background}
 label-muted =  婢 Muted
 label-muted-padding = 1
+
+click-right=pavucontrol
 
 [module/date]
 type = internal/date
@@ -132,7 +126,7 @@ interval = 1
 
 date = %a %d %b, %H:%M
 
-format-background = ${colors.primary}
+format-background = ${colors.background}
 label =   %date%
 label-padding = 1
 
@@ -151,7 +145,7 @@ label-unmounted-foreground = ${colors.disabled}
 type = internal/xworkspaces
 
 label-active = %name%
-label-active-background = ${colors.background-alt}
+label-active-background = ${colors.background}
 label-active-underline= ${colors.primary}
 label-active-padding = 1
 
