--- a/i3/config
+++ b/i3/config
@@ -39,10 +39,11 @@ client.background       #241f31
 assign [class="Steam"] 8
 
 # Rules
+for_window [instance="st" title="lf"] floating enable
 for_window [instance="Places" class="firefox"] floating enable
 for_window [class="Dragon"] border pixel 1
 for_window [class="Steam"] floating enable
-for_window [class="Pavucontrol"] floating enable border pixel 2
+for_window [class="Pavucontrol"] floating enable border pixel 1
 
 # Keybindings
 set $mod Mod4
