--- a/i3/config
+++ b/i3/config
@@ -79,6 +79,10 @@ bindsym $mod+u split vertical
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
 
+# Send window to scratchpad
+bindsym $mod+Shift+minus move scratchpad
+bindsym $mod+Shift+plus scratchpad show
+
 # change container layout (stacked, tabbed, toggle split)
 bindsym $mod+s layout stacking
 bindsym $mod+w layout tabbed
