i3,sxhkd & polybar: Better scratchap toggling

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -118,7 +118,7 @@ format-muted-background = ${colors.background}
 label-muted =  婢 Muted
 label-muted-padding = 1
 
-click-right=pavucontrol
+click-right = i3_scratchpad_show_or_create 'pipewire' 'pavucontrol'
 
 [module/date]
 type = internal/date
