--- a/i3/config
+++ b/i3/config
@@ -35,11 +35,10 @@ client.background       #241f31
 #  WM_NAME(STRING) = title
 
 # Workspaces
-# assign [class="firefox"] 1
 assign [class="Steam"] 8
 
 # Rules
-for_window [instance="st" title="lf"] floating enable
+for_window [instance="st" title="^lf$"] floating enable
 for_window [instance="Places" class="firefox"] floating enable
 for_window [class="Dragon"] border pixel 1
 for_window [class="Steam"] floating enable
