conky: Special line for XFCE desktop

--- a/conky/conky.conf
+++ b/conky/conky.conf
@@ -42,6 +42,7 @@ conky.config = {
     own_window_argb_value = 200,
     own_window_type = 'desktop',
     own_window_class = 'Conky',
+    own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
     show_graph_range = false,
     show_graph_scale = true,
     stippled_borders = 0,
