Revert "conky: Light theme"
This reverts commit cdce4fad1a5678521042799ec9d455592050bbc4.

--- a/conky/conky.conf
+++ b/conky/conky.conf
@@ -12,12 +12,12 @@
 -- https://www.lua.org/pil/contents.html
 
 conky.config = {
-    alignment = 'middle_right',
+    alignment = 'top_right',
     background = true,
     border_width = 1,
     cpu_avg_samples = 4,
-    default_color = 'black',
-    default_outline_color = 'black',
+    default_color = 'white',
+    default_outline_color = 'white',
     default_shade_color = 'white',
     double_buffer = true,
     draw_borders = false,
@@ -25,9 +25,9 @@ conky.config = {
     draw_outline = false,
     draw_shades = false,
     extra_newline = false,
-    font = 'Noto Sans Mono:size=11',
-    gap_x = 15,
-    gap_y = 0,
+    font = 'Noto Sans Mono:size=12',
+    gap_x = 10,
+    gap_y = 50,
     minimum_height = 5,
     minimum_width = 5,
     maximum_width = 300,
@@ -39,11 +39,10 @@ conky.config = {
     out_to_x = true,
     own_window = true,
     own_window_argb_visual = true,
-    own_window_argb_value = 230,
+    own_window_argb_value = 200,
     own_window_type = 'desktop',
     own_window_class = 'Conky',
     own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
-    own_window_colour = '#fff',
     show_graph_range = false,
     show_graph_scale = true,
     stippled_borders = 0,
@@ -58,27 +57,32 @@ UPTIME: $uptime
 PROCESSES: $processes
 LOAD AVERAGE: $loadavg
 $hr
-${color 000}CPU1 ${cpu cpu1}%${goto 160}${color 000}CPU2 ${cpu cpu2}%
-${color 554994}${cpubar cpu1 10, 145} ${color 554994}${cpubar cpu2 10, 145}
-${color 000}CPU3 ${cpu cpu3}%${goto 160}${color 000}CPU4 ${cpu cpu4}%
-${color 554994}${cpubar cpu3 10, 145} ${color 554994}${cpubar cpu4 10, 145}
-${color 000}${cpugraph cpu0 50,300 000 554994}
+${color fff}CPU1 ${cpu cpu1}%${goto 160}${color fff}CPU2 ${cpu cpu2}%
+${color ffce00}${cpubar cpu1 10, 145} ${color ffce00}${cpubar cpu2 10, 145}
+${color fff}CPU3 ${cpu cpu3}%${goto 160}${color fff}CPU4 ${cpu cpu4}%
+${color ffce00}${cpubar cpu3 10, 145} ${color ffce00}${cpubar cpu4 10, 145}
+${color fff}${cpugraph cpu0 50,300 FFce00 FF0000}
 ${top name 1} $alignr ${top cpu 1}%
 ${top name 2} $alignr ${top cpu 2}%
 ${top name 3} $alignr ${top cpu 3}%
 ${top name 4} $alignr ${top cpu 4}%
 ${top name 5} $alignr ${top cpu 5}%
+${top name 6} $alignr ${top cpu 6}%
+${top name 7} $alignr ${top cpu 7}%
 $hr
-RAM: ${memperc}%${goto 160}${color 000}SWAP: $swapperc%    
-${color FF87CA}${membar 10,145}	${color 94B3FD}${swapbar 10,145}
-${color 000}${memgraph 50,300 000 ff87ca}
+RAM: ${memperc}%${goto 160}${color fff}SWAP: $swapperc%    
+${color 5abcd8}${membar 10,145}	${color 0f5e9c}${swapbar 10,145}
+${color fff}${memgraph 50,300 5abcd8 0f5e9c}
 ${top_mem name 1} $alignr ${top_mem mem_res 1}
 ${top_mem name 2} $alignr ${top_mem mem_res 2}
 ${top_mem name 3} $alignr ${top_mem mem_res 3}
 ${top_mem name 4} $alignr ${top_mem mem_res 4}
 ${top_mem name 5} $alignr ${top_mem mem_res 5}
+${top_mem name 6} $alignr ${top_mem mem_res 6}
+${top_mem name 7} $alignr ${top_mem mem_res 7}
 $hr
-D SPEED:${goto 160}U SPEED:
-${downspeedf wlp2s0}KiB/s${goto 160}${upspeedf wlp2s0}KiB/s
-${downspeedgraph wlp2s0 50,145 000 99d9ff} ${upspeedgraph wlp2s0 50,145 000 698269}
+DOWNLOAD SPEED: ${downspeedf wlp2s0}KiB/s
+${downspeedgraph wlp2s0 50,300 ffffff 99d9ff}
+UPLOAD SPEED: ${upspeedf wlp2s0}KiB/s
+${upspeedgraph wlp2s0 50,300 F1DBBF 698269}
 ]]
