--- a/conky/conky.conf
+++ b/conky/conky.conf
@@ -12,7 +12,7 @@
 -- https://www.lua.org/pil/contents.html
 
 conky.config = {
-    alignment = 'top_right',
+    alignment = 'middle_right',
     background = true,
     border_width = 1,
     cpu_avg_samples = 4,
@@ -25,9 +25,9 @@ conky.config = {
     draw_outline = false,
     draw_shades = false,
     extra_newline = false,
-    font = 'Noto Sans Mono:size=12',
+    font = 'Inconsolata:size=12',
     gap_x = 10,
-    gap_y = 50,
+    gap_y = 10,
     minimum_height = 5,
     minimum_width = 5,
     maximum_width = 300,
@@ -39,10 +39,11 @@ conky.config = {
     out_to_x = true,
     own_window = true,
     own_window_argb_visual = true,
-    own_window_argb_value = 200,
+    own_window_argb_value = 150,
     own_window_type = 'desktop',
     own_window_class = 'Conky',
     own_window_hints = 'undecorated,below,sticky,skip_taskbar,skip_pager',
+    own_window_colour = 'black',
     show_graph_range = false,
     show_graph_scale = true,
     stippled_borders = 0,
@@ -67,8 +68,6 @@ ${top name 2} $alignr ${top cpu 2}%
 ${top name 3} $alignr ${top cpu 3}%
 ${top name 4} $alignr ${top cpu 4}%
 ${top name 5} $alignr ${top cpu 5}%
-${top name 6} $alignr ${top cpu 6}%
-${top name 7} $alignr ${top cpu 7}%
 $hr
 RAM: ${memperc}%${goto 160}${color fff}SWAP: $swapperc%    
 ${color 5abcd8}${membar 10,145}	${color 0f5e9c}${swapbar 10,145}
@@ -78,11 +77,8 @@ ${top_mem name 2} $alignr ${top_mem mem_res 2}
 ${top_mem name 3} $alignr ${top_mem mem_res 3}
 ${top_mem name 4} $alignr ${top_mem mem_res 4}
 ${top_mem name 5} $alignr ${top_mem mem_res 5}
-${top_mem name 6} $alignr ${top_mem mem_res 6}
-${top_mem name 7} $alignr ${top_mem mem_res 7}
 $hr
-DOWNLOAD SPEED: ${downspeedf wlp2s0}KiB/s
-${downspeedgraph wlp2s0 50,300 ffffff 99d9ff}
-UPLOAD SPEED: ${upspeedf wlp2s0}KiB/s
-${upspeedgraph wlp2s0 50,300 F1DBBF 698269}
+D SPEED:${goto 160}U SPEED:
+${downspeedf wlp2s0}KiB/s${goto 160}${upspeedf wlp2s0}KiB/s
+${downspeedgraph wlp2s0 50,145 ffffff 99d9ff} ${upspeedgraph wlp2s0 50,145 F1DBBF 698269}
 ]]
