conky: Fixed issues after update

--- a/conky/conky.conf
+++ b/conky/conky.conf
@@ -58,21 +58,21 @@ UPTIME: $uptime
 PROCESSES: $processes
 LOAD AVERAGE: $loadavg
 $hr
-${color fff}CPU1 ${cpu cpu1}%${goto 160}${color fff}CPU2 ${cpu cpu2}%
+CPU1 ${cpu cpu1}%${goto 160}CPU2 ${cpu cpu2}%
 ${color ffce00}${cpubar cpu1 10, 145} ${color ffce00}${cpubar cpu2 10, 145}
-${color fff}CPU3 ${cpu cpu3}%${goto 160}${color fff}CPU4 ${cpu cpu4}%
+${color white}CPU3 ${cpu cpu3}%${goto 160}CPU4 ${cpu cpu4}%
 ${color ffce00}${cpubar cpu3 10, 145} ${color ffce00}${cpubar cpu4 10, 145}
-${color fff}${cpugraph cpu0 50,300 FFce00 FF0000}
-${top name 1} $alignr ${top cpu 1}%
+${cpugraph cpu0 50,300 FFce00 FF0000}
+${color white}${top name 1} $alignr ${top cpu 1}%
 ${top name 2} $alignr ${top cpu 2}%
 ${top name 3} $alignr ${top cpu 3}%
 ${top name 4} $alignr ${top cpu 4}%
 ${top name 5} $alignr ${top cpu 5}%
 $hr
-RAM: ${memperc}%${goto 160}${color fff}SWAP: $swapperc%    
+RAM: ${memperc}%${goto 160}SWAP: $swapperc%
 ${color 5abcd8}${membar 10,145}	${color 0f5e9c}${swapbar 10,145}
-${color fff}${memgraph 50,300 5abcd8 0f5e9c}
-${top_mem name 1} $alignr ${top_mem mem_res 1}
+${memgraph 50,300 5abcd8 0f5e9c}
+${color white}${top_mem name 1} $alignr ${top_mem mem_res 1}
 ${top_mem name 2} $alignr ${top_mem mem_res 2}
 ${top_mem name 3} $alignr ${top_mem mem_res 3}
 ${top_mem name 4} $alignr ${top_mem mem_res 4}
