--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -17,11 +17,11 @@
 ;==========================================================
 
 [colors]
-background = #000000
-foreground = #deddda
+background = #222222
+foreground = #bbbbbb
 disabled   = #3d3864
-primary    = #15549e
-urgent     = #e01b24
+primary    = #005577
+urgent     = #900000
 
 [bar/mybar]
 locale = es_MX.UTF-8
@@ -34,7 +34,7 @@ background = ${colors.background}
 foreground = ${colors.foreground}
 
 ; Size of underline
-line-size = 2pt
+line-size = 0pt
 
 padding-left = 0
 padding-right = 0
@@ -44,7 +44,7 @@ module-margin = 0
 separator = |
 separator-foreground = ${colors.disabled}
 
-font-0 = "monospace:style=SemiBold:size=10;1"
+font-0 = "Inconsolata:size=11;1"
 font-1 = "Symbols Nerd Font Mono:size=10;1"
 
 cursor-click = pointer
@@ -67,7 +67,7 @@ label-mode-background = ${colors.primary}
 
 label-focused = %name%
 label-focused-foreground = ${colors.foreground}
-label-focused-background = ${colors.background}
+label-focused-background = ${colors.primary}
 label-focused-underline = ${colors.foreground}
 label-focused-padding = 1
 
@@ -75,8 +75,8 @@ label-visible = %name%
 label-visible-padding = 1
 
 label-urgent = %name%
-label-urgent-foreground = ${colors.urgent}
-label-urgent-background = ${colors.background}
+label-urgent-foreground = ${colors.foreground}
+label-urgent-background = ${colors.urgent}
 label-urgent-underline = ${colors.urgent}
 label-urgent-padding = 1
 
