--- a/i3/no_i3_keybindings.conf
+++ b/i3/no_i3_keybindings.conf
@@ -1,6 +1,6 @@
 #vim: set filetype=i3config
 
-bindsym $mod+Shift+Return exec xfce4-terminal
+bindsym $mod+Shift+Return exec alacritty
 bindsym $mod+Shift+i exec firefox
 bindsym $mod+p exec j4-dmenu-desktop --no-generic
 
@@ -21,3 +21,6 @@ bindsym Print exec flameshot gui
 
 # Lock Screen
 bindsym Control+Mod1+l exec powermenu
+
+# Window size like laptop screen (for games mostly)
+bindsym Control+Mod1+p floating enable, resize set 1366 px 768 px
