--- a/i3/window_rules.conf
+++ b/i3/window_rules.conf
@@ -1,12 +1,21 @@
-# vim: set filetype=i3config
+# xprop(1):
+#  WM_CLASS(STRING) = instance, class
+#  WM_NAME(STRING) = title
 
-# Workspaces
+# Steam
 assign [class="Steam"] 8
-
-# Rules
-# for_window [instance="st" title="^lf$"] floating enable
-for_window [instance="Places" class="firefox"] floating enable
-# for_window [class="Dragon"] border pixel 1
 for_window [class="Steam"] floating enable
-for_window [class="Pavucontrol"] floating enable border pixel 1
 
+# Minecraft
+for_window [class="minecraft-launcher"] floating enable
+for_window [class="Minecraft Launcher"] floating enable
+
+# Firefox
+for_window [instance="Places" class="firefox"] floating enable
+
+for_window [class="Pavucontrol"] floating enable border pixel 1
+for_window [class="pcmanfm-qt"] floating enable border pixel 1
+
+# for_window [title="(- btop++)$"] floating enable border pixel 1
+# for_window [instance="st" title="^lf$"] floating enable
+# for_window [class="Dragon"] border pixel 1
