i3: more window rules

--- a/i3/window_rules.conf
+++ b/i3/window_rules.conf
@@ -13,8 +13,11 @@ for_window [class="Minecraft Launcher"] floating enable
 # Firefox
 for_window [instance="Places" class="firefox"] floating enable
 
+# Floating for volume control and network manager managment
+# also for the file manager
 for_window [class="Pavucontrol"] floating enable border pixel 1
 for_window [class="pcmanfm-qt"] floating enable border pixel 1
+for_window [class="Nm-connection-editor"] floating enable border pixel 1
 
 # for_window [title="(- btop++)$"] floating enable border pixel 1
 # for_window [instance="st" title="^lf$"] floating enable
