--- a/i3/window_rules.conf
+++ b/i3/window_rules.conf
@@ -2,16 +2,21 @@
 #  WM_CLASS(STRING) = instance, class
 #  WM_NAME(STRING) = title
 
+# Document scanner
+for_window [class="Simple-scan"] floating enable border pixel 1
+
 # Steam
 assign [class="Steam"] 8
 for_window [class="Steam"] floating enable
 
 # Minecraft
+assign [class="Minecraft Launcher"] 8
+for_window [class="Minecraft Launcher"] floating enable, resize set 1366 px 768 px
 for_window [class="minecraft-launcher"] floating enable
-for_window [class="Minecraft Launcher"] floating enable
 
 # Firefox
 for_window [instance="Places" class="firefox"] floating enable
+for_window [title="Picture-in-Picture"] border pixel 2
 
 # Floating for volume control and network manager managment
 # also for the file manager
