--- a/gtk-3.0/settings.ini
+++ b/gtk-3.0/settings.ini
@@ -2,7 +2,7 @@
 gtk-theme-name=Mint-Y-Dark-Grey
 gtk-icon-theme-name=ePapirus-Dark
 gtk-toolbar-style=GTK_TOOLBAR_BOTH
-gtk-font-name=Noto Sans 10
+gtk-font-name=Sans 10
 gtk-application-prefer-dark-theme=1
 # gtk-cursor-theme-name=DMZ-White
 gtk-cursor-theme-size=0
